--- a/404.html
+++ b/404.html
@@ -600,6 +600,13 @@
   
   
   
+  <h2>Latest</h2>
+  <ul>
+    
+      <li><a href="/publication/communication-aware-job-scheduling-using-slurm/">Communication-aware Job Scheduling using SLURM</a></li>
+    
+  </ul>
+  
 
 </div>
   </div>
