--- a/publication/communication-aware-job-scheduling-using-slurm/index.html
+++ b/publication/communication-aware-job-scheduling-using-slurm/index.html
@@ -771,10 +771,6 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/%20https://doi.org/10.1145/3409390.3409410" target="_blank" rel="noopener">
-  DOI
-</a>
-
 
 
 </div>
@@ -827,17 +823,21 @@
 
     <div class="space-below"></div>
 
-    <div class="article-style"><div class="alert alert-note">
-  <div>
-    Click the <em>Cite</em> button above to demo the feature to enable visitors to import publication metadata into their reference management software.
-  </div>
-</div>
+    <div class="article-style"><h1 id="heading"></h1>
 <div class="alert alert-note">
   <div>
-    Click the <em>Slides</em> button above to demo Academic&rsquo;s Markdown slides feature.
+    #Click the <em>Cite</em> button above to demo the feature to enable visitors to import publication metadata into their reference management software.
+#
   </div>
 </div>
-<p>Supplementary notes can be added here, including <a href="https://sourcethemes.com/academic/docs/writing-markdown-latex/" target="_blank" rel="noopener">code and math</a>.</p>
+<h1 id="heading-1"></h1>
+<div class="alert alert-note">
+  <div>
+    #Click the <em>Slides</em> button above to demo Academic&rsquo;s Markdown slides feature.
+#
+  </div>
+</div>
+<p>#Supplementary notes can be added here, including <a href="https://sourcethemes.com/academic/docs/writing-markdown-latex/" target="_blank" rel="noopener">code and math</a>.</p>
 </div>
 
     
