--- a/index.html
+++ b/index.html
@@ -1015,9 +1015,10 @@
 
 <div class="col-12 col-lg-8">
 
-  <div class="alert alert-note">
+  <p>#<div class="alert alert-note"></p>
   <div>
-    Quickly discover relevant content by <a href="./publication/">filtering publications</a>.
+    #Quickly discover relevant content by <a href="./publication/">filtering publications</a>.
+#
   </div>
 </div>
 
