--- a/project/energy-disaggregation-using-optimization-problem/index.html
+++ b/project/energy-disaggregation-using-optimization-problem/index.html
@@ -710,7 +710,8 @@
   <div class="article-container">
 
     <div class="article-style">
-      
+      <p>Description goes here</p>
+
     </div>
 
     
