--- a/publication/communication-aware-job-scheduling-using-slurm/index.html
+++ b/publication/communication-aware-job-scheduling-using-slurm/index.html
@@ -769,6 +769,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1" href="https://www.youtube.com/watch?v=h5KQ1v3bWAQ" target="_blank" rel="noopener">
+  Video
+</a>
+
 
 
 
