add project content

--- a/project/improving-scheduling-using-job-runtime-predictions/index.html
+++ b/project/improving-scheduling-using-job-runtime-predictions/index.html
@@ -34,7 +34,7 @@
   
     
   
-  <meta name="description" content="Modeling climate trends and variability in the Himalaya to understand cryosphere changes Short description">
+  <meta name="description" content="In this work, we were interested in studying the impact of job runtime estimates on the performances of non-clairoyant scheduling algorithms. More specifically, we consider the problem of scheduling a set of independent jobs whose processing times are unknown.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://priya2698.github.io/project/improving-scheduling-using-job-runtime-predictions/">
@@ -279,7 +279,7 @@
   <meta property="og:site_name" content="Priya Mishra">
   <meta property="og:url" content="https://priya2698.github.io/project/improving-scheduling-using-job-runtime-predictions/">
   <meta property="og:title" content="Improving Scheduling using Job Runtime Predictions | Priya Mishra">
-  <meta property="og:description" content="Modeling climate trends and variability in the Himalaya to understand cryosphere changes Short description"><meta property="og:image" content="https://priya2698.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
+  <meta property="og:description" content="In this work, we were interested in studying the impact of job runtime estimates on the performances of non-clairoyant scheduling algorithms. More specifically, we consider the problem of scheduling a set of independent jobs whose processing times are unknown."><meta property="og:image" content="https://priya2698.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="https://priya2698.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
     
@@ -327,7 +327,7 @@
       "url": "https://priya2698.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_192x192_fill_lanczos_center_2.png"
     }
   },
-  "description": "Modeling climate trends and variability in the Himalaya to understand cryosphere changes Short description"
+  "description": "In this work, we were interested in studying the impact of job runtime estimates on the performances of non-clairoyant scheduling algorithms. More specifically, we consider the problem of scheduling a set of independent jobs whose processing times are unknown."
 }
 </script>
 
@@ -710,8 +710,7 @@
   <div class="article-container">
 
     <div class="article-style">
-      <h2 id="modeling-climate-trends-and-variability-in-the-himalaya-to-understand-cryosphere-changes">Modeling climate trends and variability in the Himalaya to understand cryosphere changes</h2>
-<p>Short description</p>
+      <p>In this work, we were interested in studying the impact of job runtime estimates on the performances of non-clairoyant scheduling algorithms. More specifically, we consider the problem of scheduling a set of independent jobs whose processing times are unknown. User runtimes are known to be highly inaccurate. Scheduling policies such as backfilling or shortest job first rely on these estimates to schedule jobs. In this work, we explore the use of machine learning methods to provide better estimates for the exceution times using user history and job characteristics. Instead of estimating the exact value of the job runtime, we consider that the jobs fall in two categories &ndash; short and long jobs and predict the type of each job. We used several classification models as well as simpler schemes such as predicting based on the class of previously submitted jobs alone. We evaluated our models using several full workload traces.</p>
 
     </div>
 
