--- a/project/optimizing-resource-allocation-on-fat-tree-networks/index.html
+++ b/project/optimizing-resource-allocation-on-fat-tree-networks/index.html
@@ -720,7 +720,7 @@
   <div class="article-container">
 
     <div class="article-style">
-      <p>Jobs submitted to clusters or supercomputers vary in resource requirements and execution times. Increasingly, they also vary in other characteristics such as communication and I/O behavior. Most of the current job-schedulers do not consider the communication characteristics of a job which leads to sub-optimal allocations. In this work, we developed a greedy node-allocation algorithm for tree-based network topology. The algorithm uses the information about already running communication-intensive jobs in the cluster. An incoming communication-intensive job is allocated resources on the leaf switches which have maximum free nodes available and minimum communication-intensive jobs already running. More details about the algorithm and the results can be found in our</p>
+      <p>Jobs submitted to clusters or supercomputers vary in resource requirements and execution times. Increasingly, they also vary in other characteristics such as communication and I/O behavior. Most of the current job-schedulers do not consider the communication characteristics of a job which leads to sub-optimal allocations. In this work, we developed a greedy node-allocation algorithm for tree-based network topology. The algorithm uses the information about already running communication-intensive jobs in the cluster. An incoming communication-intensive job is allocated resources on the leaf switches which have maximum free nodes available and minimum communication-intensive jobs already running. More details about the algorithm and the results can be found in our <a href="">paper</a>.</p>
 
     </div>
 
