--- a/index.html
+++ b/index.html
@@ -1428,6 +1428,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://github.com/Priya2698/slurm_changes" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
