--- a/project/energy-disaggregation-using-optimization-problem/index.html
+++ b/project/energy-disaggregation-using-optimization-problem/index.html
@@ -34,7 +34,7 @@
   
     
   
-  <meta name="description" content="In this work, our aim was to develop an energy disaggregation algorithm for the Qarnot Computing platform. The Qarnot Computing platform uses computer-heaters and utilizes the waste heat from IT computations in their buidings an offices.">
+  <meta name="description" content="In this work, our aim was to develop an energy disaggregation algorithm for the Qarnot Computing platform. The Qarnot Computing platform uses computing-heaters and utilizes the waste heat from IT computations in their buidings and offices.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://priya2698.github.io/project/energy-disaggregation-using-optimization-problem/">
@@ -279,7 +279,7 @@
   <meta property="og:site_name" content="Priya Mishra">
   <meta property="og:url" content="https://priya2698.github.io/project/energy-disaggregation-using-optimization-problem/">
   <meta property="og:title" content="Energy Disaggregation using optimization problem | Priya Mishra">
-  <meta property="og:description" content="In this work, our aim was to develop an energy disaggregation algorithm for the Qarnot Computing platform. The Qarnot Computing platform uses computer-heaters and utilizes the waste heat from IT computations in their buidings an offices."><meta property="og:image" content="https://priya2698.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
+  <meta property="og:description" content="In this work, our aim was to develop an energy disaggregation algorithm for the Qarnot Computing platform. The Qarnot Computing platform uses computing-heaters and utilizes the waste heat from IT computations in their buidings and offices."><meta property="og:image" content="https://priya2698.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="https://priya2698.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
     
@@ -327,7 +327,7 @@
       "url": "https://priya2698.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_192x192_fill_lanczos_center_2.png"
     }
   },
-  "description": "In this work, our aim was to develop an energy disaggregation algorithm for the Qarnot Computing platform. The Qarnot Computing platform uses computer-heaters and utilizes the waste heat from IT computations in their buidings an offices."
+  "description": "In this work, our aim was to develop an energy disaggregation algorithm for the Qarnot Computing platform. The Qarnot Computing platform uses computing-heaters and utilizes the waste heat from IT computations in their buidings and offices."
 }
 </script>
 
@@ -713,7 +713,7 @@
   <div class="article-container">
 
     <div class="article-style">
-      <p>In this work, our aim was to develop an energy disaggregation algorithm for the Qarnot Computing platform. The Qarnot Computing platform uses computer-heaters and utilizes the waste heat from IT computations in their buidings an offices. Through energy disaggregation, our aim was to better understand the energy requirements at different locations of the building and hence, forecast energy needs. Using this information, we can achieve a more efficient job scheduling, for example, scheduling more jobs where there is greater energy requirement. We developed an integer linear programming approach using the information provided by Qarnot Computing about different devices used in their offices and buildings.</p>
+      <p>In this work, our aim was to develop an energy disaggregation algorithm for the Qarnot Computing platform. The Qarnot Computing platform uses computing-heaters and utilizes the waste heat from IT computations in their buidings and offices. Through energy disaggregation, our aim was to better understand the energy requirements at different locations of the building and hence, forecast energy needs. Using this information, we can achieve a more efficient job scheduling, for example, scheduling more jobs where there is greater energy requirement. We developed an integer linear programming approach using the information provided by Qarnot Computing about different devices used in their offices and buildings.</p>
 
     </div>
 
