--- a/project/av_bias/index.html
+++ b/project/av_bias/index.html
@@ -34,7 +34,7 @@
   
     
   
-  <meta name="description" content="I recently started working with Dr. Fiodar Kazhamiaka in the Future Data Systems Lab, led by Prof. Matei Zaharia on removing sampling bias in data collected from autonomous vehicles. For more info, check out their position paper.">
+  <meta name="description" content="I recently started working with Dr. Fiodar Kazhamiaka in the Future Data Systems Lab, led by Prof. Matei Zaharia on removing sampling bias in data collected from autonomous vehicles. For more info on this work, check out their position paper.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://priya2698.github.io/project/av_bias/">
@@ -279,7 +279,7 @@
   <meta property="og:site_name" content="Priya Mishra">
   <meta property="og:url" content="https://priya2698.github.io/project/av_bias/">
   <meta property="og:title" content="De-biasing Autonomous Vehicle Data | Priya Mishra">
-  <meta property="og:description" content="I recently started working with Dr. Fiodar Kazhamiaka in the Future Data Systems Lab, led by Prof. Matei Zaharia on removing sampling bias in data collected from autonomous vehicles. For more info, check out their position paper."><meta property="og:image" content="https://priya2698.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
+  <meta property="og:description" content="I recently started working with Dr. Fiodar Kazhamiaka in the Future Data Systems Lab, led by Prof. Matei Zaharia on removing sampling bias in data collected from autonomous vehicles. For more info on this work, check out their position paper."><meta property="og:image" content="https://priya2698.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="https://priya2698.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
     
@@ -327,7 +327,7 @@
       "url": "https://priya2698.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_192x192_fill_lanczos_center_2.png"
     }
   },
-  "description": "I recently started working with Dr. Fiodar Kazhamiaka in the Future Data Systems Lab, led by Prof. Matei Zaharia on removing sampling bias in data collected from autonomous vehicles. For more info, check out their position paper."
+  "description": "I recently started working with Dr. Fiodar Kazhamiaka in the Future Data Systems Lab, led by Prof. Matei Zaharia on removing sampling bias in data collected from autonomous vehicles. For more info on this work, check out their position paper."
 }
 </script>
 
@@ -740,7 +740,7 @@
   <div class="article-container">
 
     <div class="article-style">
-      <p>I recently started working with Dr. Fiodar Kazhamiaka in the Future Data Systems Lab, led by Prof. Matei Zaharia on removing sampling bias in data collected from autonomous vehicles. For more info, check out their <a href="https://cs.stanford.edu/~fiodar/pubs/avquery-cidr21.pdf" target="_blank" rel="noopener">position paper</a>.</p>
+      <p>I recently started working with Dr. Fiodar Kazhamiaka in the Future Data Systems Lab, led by Prof. Matei Zaharia on removing sampling bias in data collected from autonomous vehicles. For more info on this work, check out their <a href="https://cs.stanford.edu/~fiodar/pubs/avquery-cidr21.pdf" target="_blank" rel="noopener">position paper</a>.</p>
 
     </div>
 
