--- a/project/meerkat/index.html
+++ b/project/meerkat/index.html
@@ -781,7 +781,7 @@
   <div class="article-container">
 
     <div class="article-style">
-      <p>I am currently working in the Hazy Research Lab led by Prof. Chris Re on the Meerkat project. Meerkat is a new data library for machine learning datasets that allows easier interaction with data across various modalities. I implemented an ML module to integrate Meerkat with PyTorch, Lightning and Huggingface models.  The module offers functionalities.</p>
+      <p>I am currently working in the Hazy Research Lab led by Prof. Chris Re on the Meerkat project. Meerkat is a new data library for machine learning datasets that allows easier interaction with data across various modalities. I implemented an ML module to integrate Meerkat with PyTorch, Lightning and Huggingface models.</p>
 
     </div>
 
