--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#projects" data-target="#projects"><span>Projects</span></a>
+          <a class="nav-link " href="/#projects" data-target="#projects"><span>Experience</span></a>
         </li>
 
         
