--- a/publication/communication-aware-job-scheduling-using-slurm/index.html
+++ b/publication/communication-aware-job-scheduling-using-slurm/index.html
@@ -607,7 +607,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/media/PriyaResume_18Oct.pdf"><span>CV</span></a>
+          <a class="nav-link " href="/media/PriyaResume_18Oct.pdf"><span>Resume</span></a>
         </li>
 
         
